# nextnutri-bodycomp-mvp

./: .gitignore  LICENSE  PROJECT_CONTROL.md  README.md  ROADMAP_50.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/ISSUE_TEMPLATE/: browser_automation.yml  config.yml  content_publish.yml  devops_deploy.yml  finance_report.yml  (+1 more)
.streamlit/: config.toml
bodycomp_estimator/: estimator.py  features.py  pose.py  quality.py  schemas.py
reports/: coco_val2017_pose_on_roi_sample_summary.md  coco_val2017_pose_roi_vs_full.md  coco_val_pose_smoketest_summary.md  delta_train_vs_val_pad025.md  plan_batch1_nlp.md  plan_batch2_nlp.md  plan_state.json  pose_roi_failure_vs_size.md  pose_roi_gate_recommendation.md  quality_eval.md  quality_eval_min96_n1000.md  quality_eval_min96_n2000.md  quality_eval_n1000.md  quality_eval_n2000.md  quality_eval_n5000.md  quality_eval_pad025.md  quality_eval_pad025_min128_n2000.md  quality_eval_pad025_rerun.md  quality_eval_pad030_min128_n2000.md  quality_eval_pad030_rerun.md  quality_eval_pad035_min128_n2000.md  quality_eval_pad035_n2000.md  quality_eval_pad30.md  quality_eval_train_n1000.md  quality_eval_train_pad025_n5000.md  quality_eval_val_pad025_min128_n2000.md  quality_eval_val_pad025_min160_n2000.md  quality_eval_val_pad025_min96_n2000.md  quality_eval_val_pad025_n5000.md  quality_model_baseline_train_proxy.md  quality_model_multiclass.md  quality_model_v1.md  status_summary.md  sweep_thresholds_pad025.md  trello_faraday_ops.json
scripts/: download_coco_keypoints_val2017.py  label_quality_cli.py
streamlit_app/: app.py
(+27 files in other folders)
