[project]
name = "nextnutri-bodycomp"
version = "0.1.0"
description = "MVP: photo-based body composition (body fat %) estimation for nutrition professionals (research/prototype)."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Wollis Ellis"}]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
addopts = "-q"
